--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,15 @@
 name = "abow"
 version = "0.1.0"
 authors = ["Alex Maiorella <alex@maiorella.org>"]
+repository = "https://github.com/donkeyteethUX/abow"
+homepage = "https://github.com/donkeyteethUX/abow"
 edition = "2018"
+keywords = ["slam", "bag of words", "visual odometry", "computer vision", "loop closure"]
+categories = ["algorithms", "computer-vision", "mathematics", "science"]
+description = "Visual bag of words for fast image matching"
+exclude = ["data"]
+readme = "README.md"
+license = "MIT"
 
 [features]
 default = ["useopencv"]
@@ -12,9 +20,9 @@ useopencv = ["opencv"]
 serde = { version = "1.0", features = ["derive"] }
 opencv = { version = "0.46", optional = true }
 bitvec = "0.20"
-rand = "*"
-bincode = "*"
-thiserror = "*"
+rand = "0.8"
+bincode = "1.3"
+thiserror = "1.0"
 
 [[example]]
 name = "match"
