--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name        = "abow"
-version     = "0.1.3"
+version     = "0.2.0"
 authors     = ["Alex Maiorella <alex@maiorella.org>"]
 repository  = "https://github.com/donkeyteethUX/abow"
 edition     = "2018"
@@ -15,12 +15,11 @@ license     = "MIT"
 default = ["opencv", "bincode"]
 
 [dependencies]
-serde   = { version = "1.0", features = ["derive"] }
-opencv  = { version = "0.48", optional = true }
-bincode = { version = "1.3", optional = true }
-bitvec  = "0.20"
-rand    = "0.8"
-
+serde     = { version = "1.0", features = ["derive"] }
+opencv    = { version = "0.48", optional = true }
+bincode   = { version = "1.3", optional = true }
+bitvec    = "0.20"
+rand      = "0.8"
 thiserror = "1.0"
 
 [[example]]
@@ -31,11 +30,6 @@ required-features = ["opencv", "bincode"]
 name              = "create-voc"
 required-features = ["opencv", "bincode"]
 
-[profile.release]
-debug = true
-
 [package.metadata.docs.rs]
 no-default-features = true
-
-[profile.bench]
-debug = true
+features            = ["bincode"]
